# mcp-panther

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  glama.json  pyproject.toml
.cursor/rules/: api.mdc  update-docs.mdc
.github/: CODEOWNERS  CONTRIBUTORS.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: code-quality.yml  release-publish.yml  test.yml  version-bump.yml
.prd/: REQUIREMENTS.txt
.prd/examples/: demo.py
.prd/resources/: mcp-best-practices.txt  mcp-debugging.txt  panther.graphql  panther_open_api_v3_spec.yaml
src/: README.md
src/mcp_panther/: __init__.py  __main__.py  server.py
src/mcp_panther/panther_mcp_core/: __init__.py  client.py  permissions.py  queries.py
src/mcp_panther/panther_mcp_core/prompts/: __init__.py  alert_triage.py  registry.py
src/mcp_panther/panther_mcp_core/resources/: __init__.py  config.py  registry.py
src/mcp_panther/panther_mcp_core/tools/: __init__.py  alerts.py  data_lake.py  helpers.py  metrics.py  permissions.py  registry.py  rules.py  schemas.py  sources.py  users.py
tests/: test_logging.py
tests/panther_mcp_core/: test_client.py  test_fastmcp_integration.py  test_permissions.py
tests/panther_mcp_core/tools/: test_alerts.py  test_data_lake.py  test_metrics.py  test_rules.py
tests/utils/: helpers.py
