[project]
name = "mcp-panther"
version = "0.1.0"
description = "Panther Labs MCP Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.14",
    "gql>=3.5.2",
    "mcp[cli]>=1.6.0",
    "pip-system-certs>=0.1.0",
    "python-dotenv>=1.1.0",
]

[project.scripts]
mcp-panther = "mcp_panther:main"

[dependency-groups]
dev = [
    "ruff>=0.11.2",
]

[tool.ruff]
# Allow autofix behavior for specified rules
fix = true

target-version = "py312"

[tool.ruff.lint]
# Enable pycodestyle (E), pyflakes (F), isort (I), pep8-naming (N), type-checking (TCH)
select = ["E", "F", "I", "N", "TCH"]
# Ignore E402 - Module level import not at top of file
# Ignore E501 - Line too long
ignore = ["E402", "E501"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
# Ignore imported but unused in __init__.py files
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["mcp_panther"]
